--- a/sem3_types_and_data_structure/lab_01_rewritten/makefile
+++ b/sem3_types_and_data_structure/lab_01_rewritten/makefile
@@ -1,5 +1,5 @@
 CC:=gcc
-C_FLAGS:=-Wall -Wextra -Werror -Wfloat-equal
+C_FLAGS:=-Wall -Wextra -Werror -Wfloat-equal -g3
 
 SRC_DIR:=./src
 INC_DIR:=./inc
